# 966_cocosci_forecasting

./: .gitignore  README.md  pyproject.toml
coco/: 966_cocosci.bib  __init__.py  config.py
coco/gjp/: __init__.py
coco/gjp/models/: ifp.py  readme.txt  survey_fcasts.py
coco/gjp/viz/: plot_forecasts_hist.py  plot_ifp_correlations.py  plot_ifp_timeline.py  plot_user_timeline.py
docs/: dataverse_files_notes.md
reports/: 966_cocosci.bib  notation.typ  preamble.typ  project-guidelines.md
reports/figures/cogsci/hmm/: hmm.typ
reports/figures/gjp/corr_matrix/: corr_matrix.vl.json
reports/figures/gjp/corr_topk_rows/: corr_matrix.vl.json
reports/figures/gjp/forecast_priors_hist/6413-0/: forecast_priors_hist.vl.json
reports/figures/gjp/ifp_timeline/: ifp_timeline.vl.json
reports/figures/gjp/user_timeline/122793/: user_timeline.vl.json
reports/figures/gjp/user_timeline/23066/: user_timeline.vl.json
reports/figures/gjp/user_timeline/3257/: user_timeline.vl.json
reports/figures/gjp/user_timeline/4282/: user_timeline.vl.json
reports/figures/gjp/user_timeline/5082/: user_timeline.vl.json
reports/figures/gjp/user_timeline/546/: user_timeline.vl.json
reports/final-report/: final-report.typ
tests/: test_ifps.py
