# Documentation References:
# - TOML syntax:  https://toml.io/en/v1.0.0
# - Build system: https://peps.python.org/pep-0621/
# - Ruff:         https://docs.astral.sh/ruff/settings/
# - Pytest:       https://docs.pytest.org/en/stable/reference/reference.html#configuration-options
# - Pyright:      https://github.com/microsoft/pyright/blob/main/docs/configuration.md
#
# - UV:           https://docs.astral.sh/uv/configuration/files/

# ━━━━━━━━━━━━━━━━━━━━━━━━━━ Build System ━━━━━━━━━━━━━━━━━━━━━━━━━━ #

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Project ━━━━━━━━━━━━━━━━━━━━━━━━━━━━ #

[project]
name = "coco"
version = "0.0.1"
description = "9.66 Computational Cognitive Science at MIT"
authors = [
  { name = "Gatlen Culp", email = "GatlenCulp@gmail.com" },
]

readme = { file = "README.md", content-type = "text/markdown" }

classifiers = [
  "Private :: Do Not Upload",
  "Programming Language :: Python :: 3",
  # 
  "License :: OSI Approved :: MIT License",
  # 
]

requires-python = "~=3.12.0"

dependencies = [
    "altair>=6.0.0",
    "genlm-control==0.2.11",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "kaleido>=1.1.0",
    "loguru",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "mkdocs",
    "nbformat>=5.10.4",
    "numpy>=1.26.4",
    "pandera[polars]>=0.27.0",
    "pip",
    "plotly>=5.24.1",
    "pydantic>=2.10.3",
    "pytest",
    "python-dotenv",
    "python-dotenv>=1.0.0",
    "rich>=13.9.4",
    "ruff",
    "scipy>=1.16.2",
    "torch>=2.7.1",
    "tqdm",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "typer",
    "typer>=0.15.1",
    "typst>=0.14.1",
    "vl-convert-python>=1.8.0",
]

# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ URLs ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ #
[project.urls]
Repository = "https://github.com/GatlenCulp/966_cocosci"
Homepage = "https://GatlenCulp.github.io/966_cocosci/"
Documentation = "https://GatlenCulp.github.io/966_cocosci/"


# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Scripts ━━━━━━━━━━━━━━━━━━━━━━━━━━━━ #

[project.scripts]
"coco" = "coco.cli.main:app"

# ━━━━━━━━━━━━━━━━━━━━━━━ Extra Dependencies ━━━━━━━━━━━━━━━━━━━━━━━ #

[dependency-groups]

config = [ # Configuration management
  "cookiecutter>=2.6.0", # Project templating
  "gin-config>=0.5.0",   # Config management
  "jinja2>=3.1.4",       # Template engine
]

dev = [ # Development tools
  "better-exceptions>=0.3.3", # Improved error messages
  "commitizen>=4.1.1",        # Standardized commit messages
  "cruft>=2.15.0",            # Project template management
  "faker>=33.1.0",            # Fake data generation
  "hypothesis>=6.122.3",      # Property-based testing
  "pip>=24.3.1",              # Package installer
  "polyfactory>=2.18.1",      # Test data factory
  "pre-commit>=4.1.0",        # Git pre-commit hooks
  "pyinstrument>=5.0.0",      # Profiler
  # "pyprojectsort>=0.3.0",  # pyproject.toml sorter (TODO: Find replacement)
  "pyright>=1.1.390",           # Static type checker
  "pytest>=8.3.4",              # Testing framework
  "pytest-cases>=3.8.6",        # Parametrized testing
  "pytest-cov>=6.0.0",          # Coverage reporting
  "pytest-icdiff>=0.9",         # Improved diffs
  "pytest-mock>=3.14.0",        # Mocking
  "pytest-playwright>=0.6.2",   # Browser testing
  "pytest-profiling>=1.8.1",    # Test profiling
  "pytest-random-order>=1.1.1", # Randomized test order
  "pytest-shutil>=1.8.1",       # File system testing
  "pytest-split>=0.10.0",       # Parallel testing
  "pytest-sugar>=1.0.0",        # Test progress visualization
  "pytest-timeout>=2.3.1",      # Test timeouts
  "ruff>=0.8.3",                # Fast Python linter
  # "taplo>=0.9.3",          # TOML toolkit (Requires Rust's Cargo)
  "tox>=4.23.2", # Test automation
  "uv>=0.5.7",   # Fast pip replacement
]

dev-doc = [ # Documentation tools
  "mdformat>=0.7.19",        # Markdown formatter
  "mkdocs>=1.6.1",           # Documentation generator
  "mkdocs-material>=9.5.48", # Documentation theme
]

misc = [ # Miscellaneous utilities
  "boltons>=24.1.0",   # Python utilities
  "cachetools>=5.5.0", # Caching utilities
  "wrapt>=1.17.0",     # Decorator utilities
]

# 
nb = [ # Jupyter notebook tools
  "chime>=0.7.0",      # Sound notifications
  "ipykernel>=6.29.5", # Jupyter kernel
  "ipython>=7.34.0",   # Interactive Python shell
  "ipywidgets>=8.1.5", # Jupyter widgets
  "jupyterlab>=4.3.3", # Notebook IDE
]
# 

# 

[tool.uv]
default-groups = [
  "dev"
]

# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Ruff ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ #

[tool.ruff]

src = ["coco"]

include = ["pyproject.toml", "coco/**/*.py"]
cache-dir = ".cache/ruff"
target-version = "py312"
line-length = 99
format = { quote-style = "double", indent-style = "space" }

# Sort imports on fix I guess?
select = ["I"]

[tool.ruff.lint]

# NEW
logger-objects = ["coco.config.logger"]

select = ["ALL"]
ignore = [
  "S101",   # Allow assert
  "E731",   # Allow lambdas
  "EM101",  # Allow strings in exceptions
  "T201",   # Allow print
  "D103",   # Allow public functions w/o docstrings
  "D105",   # Allow undocumented magic methods
  "D107",   # Same as above
  "D205",   # Allow multi-line summary
  "D415",   # Less strict docstrings
  "COM812", # Allow single-line string concat (Conflicts with ISC001)
  "ISC001", # Allow single-line string concat (Conflicts with COM812)
  "TD002",  # Allow user-less TODOs
  "TD003",  # Allow issue-less TODOs
  "UP007",  # Allow non-use of pipe for types
  "UP035",  # Same as above
  # EXTRA ANNOYING THINGS NEW
  "ERA001",
  "RET504",
  "FBT001",
  "FBT002",
  "INP001",
  "D100",
  "W293", # Extra white space
  "B018", # Useless expression -- Sometimes useful if running file as notebook
  # It would be cool to make some kind of Ruff selector tool. Maybe even some project where each of these rules were triggered exactly once lmao.
  "TRY003", # Long exception messages
]
# NEW
fixable = [
  "W293", # Can fix extra white space, doesn't actually work
]

mccabe.max-complexity = 10
pycodestyle.max-doc-length = 99
pydocstyle.convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["coco"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
  "F401", # Allow unused imports in __init__.py
]

"**/*.ipynb" = [
  "S101",  # Allow assert
  "E731",  # Allow lambdas
  "EM101", # Allow strings in exceptions
  "T201",  # Allow print
  "D103",  # Allow public functions w/o docstrings
  "D105",  # Allow undocumented magic methods
  "D107",  # Same as above
  "D205",  # Allow multi-line summary
  "D415",  # Less strict docstrings
  "TD002", # Allow user-less TODOs
  "TD003", # Allow issue-less TODOs
  "UP007", # Allow non-use of pipe for types
  "UP035", # Same as above
]

"tests/**/*.py" = [
  "S101",    # Allow assert
  "ARG001",  # Allow unused function args for fixtures
  "FBT001",  # Allow booleans as function params
  "PLR2004", # Allow magic values in comparisons
  "S311",    # Allow pseudo-random generators
  "ANN001",  # Allow for non-typed functions
  "ANN201",  # Allow for non-typed functions
  "RET503",  # Allow for implicit ignores
]
# 

# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Pytest ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ #

[tool.pytest.ini_options]
testpaths = ["tests"]
log_file = "./logs/pytest.log"
addopts = """
--tb=long
--code-highlight=yes
--capture=no
"""

# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Pyright ━━━━━━━━━━━━━━━━━━━━━━━━━━━━ #

[tool.pyright]
include = ["coco"]
exclude = [
  "**/__pycache__",
  ".venv",
]

